# project_templates

cupy/: flake.nix  requirements.txt
torch/: flake.nix  pyproject.toml
torch/workspace/analysis/: is_cuda_available.py
torch_pure/: flake.nix
