[tool.poetry]
name = "torch"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
polars = "^1.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"
ruff-lsp = "^0.0.54"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
